--- a/.github/workflows/lesli-spec-sqlite.yaml
+++ b/.github/workflows/lesli-spec-sqlite.yaml
@@ -75,7 +75,7 @@ jobs:
       # Prepare configuration files
       - name: Copy configuration files
         run: |
-          cp ./engines/${{ github.event.repository.name }}/.github/tools/.rspec ./.rspec
+          cp ./engines/Lesli/.github/tools/.rspec ./.rspec
           cp ./engines/Lesli/.github/rails/database_sqlite.yml ./config/database.yml
           rm ./Gemfile.lock
 
