--- a/.github/workflows/lesli-spec-sqlite.yaml
+++ b/.github/workflows/lesli-spec-sqlite.yaml
@@ -77,6 +77,7 @@ jobs:
         run: |
           cp ./engines/Lesli/.github/tools/.rspec ./.rspec
           cp ./engines/Lesli/.github/rails/database_sqlite.yml ./config/database.yml
+          rm ./Gemfile.lesli
           rm ./Gemfile.lock
 
       # Use the official receipt to install ruby in ubuntu
