copy settings for the postgresql tests

--- a/.github/workflows/lesli-spec-postgresql.yaml
+++ b/.github/workflows/lesli-spec-postgresql.yaml
@@ -77,26 +77,21 @@ jobs:
         with:
           repository: LesliTech/LesliBuilder
 
-      # Clone Lesli repository
-      - name: Checkout Lesli repository
-        uses: actions/checkout@v3
-        with:
-          path: ./engines/Lesli
-          repository: LesliTech/Lesli
-
       # Clone engine repository
-      - name: Checkout code
-        if: github.event.repository.name != 'Lesli'
+      - name: Checkout engine scode
         uses: actions/checkout@v3
         with:
           path: ./engines/${{ github.event.repository.name }}
+          repository: LesliTech/${{ github.event.repository.name }}
 
-      # Build the Lesli database
+      # Prepare configuration files
       - name: Copy configuration files
         run: |
-          cp ./engines/Lesli/.github/tools/.rspec ./.rspec
-          cp ./engines/Lesli/.github/rails/database_postgresql.yml ./config/database.yml
+          rm ./Gemfile.lesli
           rm ./Gemfile.lock
+          cp ./engines/Lesli/.github/rails/.rspec ./.rspec
+          cp ./engines/Lesli/.github/rails/Gemfile.lesli ./Gemfile.lesli
+          cp ./engines/Lesli/.github/rails/database_sqlite.yml ./config/database.yml
 
       # Use the official receipt to install ruby in ubuntu
       - name: Install Ruby and gems
@@ -104,11 +99,6 @@ jobs:
         with:
           ruby-version: 3.2.5
           bundler-cache: true
-
-      # Install core gems
-      - name: Install Ruby and gems
-        run: |
-          bundle add lesli_shield
 
       # Build the Lesli database
       - name: Set up PostgreSQL database 
