--- a/.github/workflows/lesli-spec-sqlite.yaml
+++ b/.github/workflows/lesli-spec-sqlite.yaml
@@ -50,6 +50,9 @@ jobs:
     name: Test workflow for Lesli Core (SQLite)
     runs-on: ubuntu-latest
 
+    # Do not execute the test if requests comes from another action
+    if: ${{ !contains(github.event.head_commit.message, 'ci(workflows):') && !contains(github.event.head_commit.message, 'release(gem):') && !contains(github.event.head_commit.message, 'assets(js):') }}
+
     steps:
 
       # Clone LesliBuilder repository
@@ -70,7 +73,7 @@ jobs:
         run: |
           rm ./Gemfile.lesli
           rm ./Gemfile.lock
-          cp ./engines/Lesli/.github/tools/.rspec ./.rspec
+          cp ./engines/Lesli/.github/rails/.rspec ./.rspec
           cp ./engines/Lesli/.github/rails/Gemfile.lesli ./Gemfile.lesli
           cp ./engines/Lesli/.github/rails/database_sqlite.yml ./config/database.yml
 
@@ -89,6 +92,6 @@ jobs:
 
       # Run Rspec tests & collect coverage
       - name: Run Rails tests with SQLite
-        run: bundle exec rspec spec --pattern ./engines/${{ github.event.repository.name }}/spec/**/**/*_spec.rb
+        run: bundle exec rspec spec 
         env:
           COVERAGE: true
