--- a/.github/workflows/lesli-spec-brakeman.yaml
+++ b/.github/workflows/lesli-spec-brakeman.yaml
@@ -28,62 +28,69 @@
 
 
 # -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
-# PLEASE DO NOT MODIFY THIS FILE ON THE CORE,
-# THIS FILE SHOULD BE MODIFIED ON THE LesliTech/LesliActions REPOSITORY
+# REUSABLE GITHUB ACTIONS WORKFLOWS DESIGNED TO BE USED ACROSS 
+# THE LESLI FRAMEWORK REPOSITORIES
 # -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
 
 
 
-# Specs for Lesli Core
+# Specs for The Lesli Framework
 # -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-   -·-
-    name: "Static Analysis Security Tool"
-    on:
-      workflow_call: # This allows the workflow to be reusable
-        inputs:
-          branch:
-            required: true
-            type: string
-    
-    jobs:
-      brakeman-scan:
-        name: Static Analysis Security Tool
-        runs-on: ubuntu-latest
-    
-        # Do not execute the test if requests comes from another action
-        if: ${{ !contains(github.event.head_commit.message, 'ci(workflows):') && !contains(github.event.head_commit.message, 'release(gem):') && !contains(github.event.head_commit.message, 'assets(js):') }}
+name: "Lesli specs workflow Brakeman"
+on:
+  workflow_call: # This allows the workflow to be reusable
+    inputs:
+      branch:
+        required: true
+        type: string
 
-        steps:
-    
-          # Clone LesliBuilder repository
-          - name: Checkout LesliBuilder repository
-            uses: actions/checkout@v4
-            with:
-              repository: LesliTech/LesliBuilder
-    
-          # Clone engine repository
-          - name: Checkout engine scode
-            uses: actions/checkout@v4
-            with:
-              path: ./engines/${{ github.event.repository.name }}
-              repository: LesliTech/${{ github.event.repository.name }}
+jobs:
+  brakeman-scan:
+    name: Test workflow for Lesli Core (Brakeman)
+    runs-on: ubuntu-latest
 
-          # Prepare configuration files
-          - name: Copy configuration files
-            run: |
-              rm ./Gemfile.lock
-              rm ./Gemfile.lesli
-              cp ./engines/Lesli/.github/rails/Gemfile.lesli ./Gemfile.lesli
+    # Do not execute the test if requests comes from another action
+    if: ${{ !contains(github.event.head_commit.message, 'ci(workflows):') && !contains(github.event.head_commit.message, 'release(gem):') && !contains(github.event.head_commit.message, 'assets(js):') }}
 
-          # Use the official receipt to install ruby in ubuntu
-          - name: Install Ruby and gems
-            uses: ruby/setup-ruby@v1
-            with:
-              ruby-version: 3.2.5
-              bundler-cache: true
-    
-          # Run Brakeman
-          - name: Run Brakeman Security Scanner
-            run: |
-              bundle exec brakeman 
-              continue-on-error: true
-    
+    steps:
+
+      # Clone LesliBuilder repository
+      - name: Checkout LesliBuilder repository
+        uses: actions/checkout@v4
+        with:
+          repository: LesliTech/LesliBuilder
+
+      # Clone core repository
+      - name: Checkout Lesli code
+        uses: actions/checkout@v4
+        if: "${{github.event.repository.name}} != 'Lesli'"
+        with:
+          path: ./engines/Lesli
+          repository: LesliTech/Lesli
+
+      # Clone engine repository
+      - name: Checkout engine scode
+        uses: actions/checkout@v4
+        with:
+          path: ./engines/${{ github.event.repository.name }}
+          repository: LesliTech/${{ github.event.repository.name }}
+
+      # Prepare configuration files
+      - name: Copy configuration files
+        run: |
+          rm ./Gemfile.lock
+          rm ./Gemfile.lesli
+          cp ./engines/Lesli/.github/rails/Gemfile.lesli ./Gemfile.lesli
+
+      # Use the official receipt to install ruby in ubuntu
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.2.5
+          bundler-cache: true
+
+      # Run Brakeman
+      - name: Run Brakeman Security Scanner
+        run: |
+          bundle exec brakeman 
+          continue-on-error: true
