--- a/.github/workflows/lesli-spec-postgresql.yaml
+++ b/.github/workflows/lesli-spec-postgresql.yaml
@@ -115,7 +115,7 @@ jobs:
 
       # Run Rspec tests & collect coverage
       - name: Run Rails tests & collect coverage
-        run: bundle exec rspec spec --pattern ./engines/${{ github.event.repository.name }}/spec/**/**/*_spec.rb --format documentation 
+        run: bundle exec rspec $(find engines/${{ github.event.repository.name }}/spec -name '*_spec.rb') --format documentation
         env:
           CODECOV: true
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
