--- a/package.json
+++ b/package.json
@@ -8,56 +8,20 @@
     "devDependencies": {
 
         "lesli-css": "../../../lesli-css/lesli-css-2.2.0.tgz",
-        "lesli-vue": "../../../lesli-vue/lesli-vue-1.2.0.tgz",
 
-        "sortablejs": "1.15.0",
-
-        "pinia": "2.1.6",
-        "js-yaml": "4.1.0", 
-        "i18n-js": "4.3.2",
-
-        "firebase": "10.1.0",
-
-        "@fullcalendar/core": "6.1.9",
-        "@fullcalendar/list": "6.1.9",
-        "@fullcalendar/daygrid": "6.1.9",
-        "@fullcalendar/timegrid": "6.1.9",
-        "@fullcalendar/interaction": "6.1.9",
-
-        "vue": "3.4.27",
-        "vue-demi": "0.14.5",
-        "vue-router": "4.3.3",
-        "vue-loader": "17.2.2",
-        "style-loader": "3.3.3",
-
-        "@vue/test-utils": "2.4.1",
-        "@vue/cli-service": "5.0.8",
-        "@vue/cli-plugin-babel": "5.0.8",
-        "@vue/cli-plugin-unit-mocha": "5.0.8",
-
-        "@babel/core": "7.22.9",
-        "@babel/preset-env": "7.22.9",
-        "babel-loader": "9.1.3",
+        "dayjs": "1.11.10",
 
         "webpack": "5.88.2",
         "webpack-cli": "5.1.4",
         "terser-webpack-plugin": "5.3.9",
-
-        "sass-loader": "14.1.0",
-        "mini-css-extract-plugin":"2.8.0",
+        "mini-css-extract-plugin":"2.9.2",
         "webpack-remove-empty-scripts": "1.0.4",
-
-        "chai": "4.3.7",
-        "glob": "10.3.3",
-        "jest": "29.6.2"
+        "css-loader":"7.1.2",
+        "sass-loader":"16.0.4"
     },
     "scripts": {
         "webpack": "webpack --progress --env mode=development",
         "webpack:watch": "webpack --progress --env watch=true",
-        "webpack:production": "webpack --progress --env mode=production",
-
-        "test": "npm run test:vue",
-        "test:scss": "jest tests/scss/scss.spec.js",
-        "test:vue": "vue-cli-service test:unit --recursive 'tests/vue/**/*.spec.js'"
+        "webpack:production": "webpack --progress --env mode=production"
     }
 }
