--- a/sonarcloud.properties
+++ b/sonarcloud.properties
@@ -1,2 +1,2 @@
 # Exclude test subdirectories from source scope
-sonar.exclusions=spec/dummy/**/*,test/dummy/**/*,app/views/lesli/emails/**/*
+sonar.exclusions=spec/**/*,test/**/*,app/views/lesli/emails/**/*
