add sonarcloud.properties file

--- a/sonarcloud.properties
+++ b/sonarcloud.properties
@@ -1,2 +1,29 @@
-# Exclude test subdirectories from source scope
-sonar.exclusions=spec/**/*,test/**/*,app/views/lesli/emails/**/*
+# Project identification
+sonar.projectKey=LesliTech_Lesli
+sonar.organization=LesliTech
+sonar.host.url=https://sonarcloud.io
+
+# Source code directories
+sonar.sources=app,lib
+
+# Test directories (optional, only if you want coverage)
+sonar.tests=spec,test
+
+# Exclude test files, dummy apps, and email views
+sonar.exclusions=\
+  spec/**/*,\
+  test/**/*,\
+  spec/dummy/**/*,\
+  test/dummy/**/*,\
+  app/views/lesli/emails/**/*
+
+# Coverage report path (if using SimpleCov or other tool)
+sonar.coverage.exclusions=\
+  spec/**/*,\
+  test/**/*,\
+  spec/dummy/**/*,\
+  test/dummy/**/*
+
+# Optional: Ruby file extensions
+sonar.language=ruby
+sonar.sourcesEncoding=UTF-8
