--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -8,8 +8,8 @@ sonar.sources=app,lib
 
 # Test directories - This tells Sonar which files are tests
 # Note: Do NOT put these in sonar.exclusions if you want Sonar to recognize them as tests
-sonar.tests=test,spec
-sonar.test.inclusions=test/**/*_test.rb,spec/**/*_spec.rb
+sonar.tests=test
+sonar.test.inclusions=test/**/*_test.rb
 
 # Global Exclusions (Files to ignore COMPLETELY)
 # Added: bin stubs, db migrations, and config files which often trigger false positives
