ignore minitest config file

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -19,7 +19,8 @@ sonar.exclusions=\
   config/**/*,\
   test/dummy/**/*,\
   spec/dummy/**/*,\
-  app/views/lesli/emails/**/*
+  app/views/lesli/emails/**/*,\
+  lib/test/* 
 
 # Coverage Exclusions (Files that shouldn't require test coverage)
 # We include the test folders here so they don't lower your overall % score
