--- a/.github/workflows/lesli-ci-tests.yaml
+++ b/.github/workflows/lesli-ci-tests.yaml
@@ -59,9 +59,9 @@ jobs:
     with:
       branch: ${{ github.ref_name }}
 
-  lesli-test-builder-postgresql:
-    name: Run lesli-test-builder-postgresql
+  lesli-test-builder:
+    name: Run lesli-test-builder
     needs: lesli-test-engine-minitest
-    uses: LesliTech/LesliActions/.github/workflows/lesli-test-builder-postgresql.yaml@master
+    uses: LesliTech/LesliActions/.github/workflows/lesli-test-builder.yaml@master
     with:
       branch: ${{ github.ref_name }}
