--- a/.github/workflows/lesli-ci-tests.yaml
+++ b/.github/workflows/lesli-ci-tests.yaml
@@ -65,3 +65,10 @@ jobs:
     uses: LesliTech/LesliActions/.github/workflows/lesli-test-builder.yaml@master
     with:
       branch: ${{ github.ref_name }}
+
+  lesli-test-stable:
+    name: Run lesli-test-stable
+    needs: lesli-test-builder
+    uses: LesliTech/LesliActions/.github/workflows/lesli-test-stable.yaml@master
+    with:
+      branch: ${{ github.ref_name }}
