--- a/.github/workflows/lesli-ci-tests.yaml
+++ b/.github/workflows/lesli-ci-tests.yaml
@@ -66,9 +66,9 @@ jobs:
     with:
       branch: ${{ github.ref_name }}
 
-  lesli-test-stable:
-    name: Run lesli-test-stable
+  lesli-test-new:
+    name: Run lesli-test-new
     needs: lesli-test-builder
-    uses: LesliTech/LesliActions/.github/workflows/lesli-test-stable.yaml@master
+    uses: LesliTech/LesliActions/.github/workflows/lesli-test-new.yaml@master
     with:
       branch: ${{ github.ref_name }}
